--- a/Js_local.conf
+++ b/Js_local.conf
@@ -11,7 +11,10 @@ hostname = greasyfork.org, openuserjs.org, trade-acs.m.taobao.com, *.*apps.com, 
 ^https:\/\/sk\.ulysses\.app\/api\/v1\/user_offers$ url request-header (\r\n)If-None-Match:.+(\r\n) request-header $1 
 
 #Pdfexpert
-^https:\/\/license\.pdfexpert\.com\/api\/1\.0\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body drscipt/Script/Pdfexpert.vip.js
+^https:\/\/license\.pdfexpert\.com\/api\/1\.0\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body drscipt/Pdfexpert.vip.js
+
+#美颜相机一次性解锁内购（by黑黑酱）
+^https:\/\/api\.meiyan\.com\/iap\/verify\.json url script-response-body drscipt/myxj.js
 
 ##大雄脚本组
 
