--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -132,3 +132,28 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 #新版YouTube去广告
 ctier=[A-Z] url 302 ctier=A
 ^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) url reject-200
+
+# from du_github
+#ulysses
+^https:\/\/sk\.ulysses\.app\/api\/v1\/user_offers$ url request-header (\r\n)If-None-Match:.+(\r\n) request-header $1 
+
+#美颜相机一次性解锁内购（by黑黑酱）
+^https:\/\/api\.meiyan\.com\/iap\/verify\.json url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/myxj.js
+
+#每日英语阅读/每日外刊 解锁课程  (By chamberlen)
+^https:\/\/dict\.eudic\.net\/jingting\/GetThisChapterTaskStatus? url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/mryy.js
+
+#联通营业厅 去轮播广告 (By Wangsc1)
+^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/china_unicom.js
+
+# 可可英语会员
+^https:\/\/mob2015\.kekenet\.com\/keke\/mobile\/index\.php url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/kkyy.js
+
+#abaenglish (未测试)
+^https:\/\/api\.revenuecat\.com\/v1\/(receipts|\d{1,})$ url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/abaenglish.vip.js
+
+#流利说.阅读 (by@火羽&@singee)
+^https?:\/\/vira\.llsapp\.com\/api\/v2\/readings\/(accessible|limitation) url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/llyd.js
+
+#Pdfexpert
+^https:\/\/license\.pdfexpert\.com\/api\/1\.0\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/Pdfexpert.vip.js
