--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -1,6 +1,97 @@
-hostname = api.weibo.cn, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, api.bilibili.com, app.bilibili.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname = api.weibo.cn, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
+# Ads Block
+# -  什么值得买 Ads
+^https?:\/\/api\.smzdm\.com\/v\d\/util\/loading url reject-img
+^https?:\/\/api\.smzdm\.com\/v2\/util\/banner url reject-img
+
+# 豆瓣 Ads
+# (154.8.131.* 疑似自签证书不可验证)
+^https?:\/\/api\.douban\.com\/v2\/app_ads\/common_ads url reject-img
+^https?:\/\/frodo\.douban\.com\/api\/v2\/movie\/banner url reject-img
+^https?:\/\/img\d\.doubanio\.com\/view\/dale-online\/dale_ad\/ url reject-img
+^https?:\/\/(\d{1,3}\.){1,3}\d{1,3}\/view\/dale-online\/dale_ad\/ url reject-img
+^https?:\/\/.+\/v2\/app_ads\/ url reject-img
+
+# China Unicom Ads
+^https?:\/\/m\.client\.10010\.com\/mobileService\/(activity|customer)\/(accountListData|get_client_adv|get_startadv) url reject-img
+^https?:\/\/m\.client\.10010\.com\/uniAdmsInterface\/(getHomePageAd|getWelcomeAd) url reject-img
+^https?:\/\/m1\.ad\.10010\.com\/noticeMag\/images\/imageUpload\/2\d{3} url reject-img
+^https?:\/\/res\.mall\.10010\.cn\/mall\/common\/js\/fa\.js?referer= url reject-img
+#联通营业厅 去轮播广告 (By Wangsc1)
+^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/china_unicom.js
+
+# China Guangfa Bank Ads
+^https?:\/\/mps\.95508\.com\/mps\/club\/cardPortals\/adv\/.{25}\.jpg url reject-img
+
+# CMB Ads
+^https?:\/\/mlife\.cmbchina\.com/ClientFaceService\/preCacheAdvertise\.json url reject-img
+^https?:\/\/mlife\.cmbchina\.com\/ClientFaceService\/getAdvertisement\.json url reject-img
+^https?:\/\/pic1cdn\.cmbchina\.com\/appinitads\/ url reject-img
+^https?:\/\/www\.cmbc\.com\.cn\/m\/image\/loadingpage\/ url reject-img
+^https?:\/\/resource\.cmbchina\.com\/fsp\/File\/ClientFacePublic\/.+\.gif url reject-img
+
+# ICBC Ads
+^https?:\/\/v\.icbc\.com\.cn\/userfiles\/Resources\/WAP\/advertisement\/ url reject-img
+
+# BOC Ads
+^https?:\/\/mlife\.jf365\.boc\.cn\/AppPrj\/FirstPic\.do\? url reject-img
+
+# 哔哩哔哩 Ads
+^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/ url reject-img
+
+# - 百度地图 Ads
+^https?:\/\/ss0\.bdstatic\.com/.+_\d{3}_\d{4}\.jpg url reject-img
+
+# 爱奇艺 Ads
+^https?:\/\/iface\.iqiyi\.com\/api\/getNewAdInfo url reject-img
+^https?:\/\/.+\/(mixer|track2)\? url reject-img
+^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/show.do url reject-img
+^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/v2\/show url reject-img
+^https?:\/\/.+\/cdn\/qiyiapp\/\d{8}\/.+&dis_dz= url reject-img
+^https?:\/\/.+\/cdn\/qiyiapp\/\d{8}\/.+&z=\w url reject-img
+^https?:\/\/.+\/videos\/other\/ url reject
+^https?:\/\/iface2\.iqiyi\.com\/fusion\/3\.0\/fusion_switch url reject-img
+
+# 美团 Ads
+^https?:\/\/img\.meituan\.net\/(adunion|display|midas)\/.+\.(gif|jpg|jpg\.webp)$ url reject-img
+^https?:\/\/p\d\.meituan\.net\/wmbanner\/[A-Za-z0-9]+\.jpg url reject-img
+^https?:\/\/p\d\.meituan\.net\/movie\/[A-Za-z0-9]+\.jpg\?may_covertWebp url reject-img
+^https?:\/\/s3plus\.meituan\.net\/.+\/linglong\/.+\.(gif|jpg|mp4) url reject-img
+
+# 字节跳动 Ads
+^https?:\/\/.+\.pstatp\.com\/img\/ad url reject-img
+^https?:\/\/pb\d\.pstatp\.com\/origin url reject-img
+^https?:\/\/.+\.(musical|snssdk|tiktokv)\.(com|ly)\/(api|motor)\/ad\/ url reject-img
+^https?:\/\/dsp\.toutiao\.com\/api\/xunfei\/ads\/ url reject-img
+^https?:\/\/.+\.snssdk\.com\/motor\/operation\/activity\/display\/config\/V2\/ url reject-img
+^https?:\/\/.+\.pstatp\.com\/img\/ad url reject-img
+^https?:\/\/.+\.snssdk\.com\/api\/ad\/ url reject-img
+^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/aweme\/stats\/ url reject-img
+^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/device\/update\/ url reject-img
+^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/screen\/ad\/ url reject-img
+^https?:\/\/aweme\.snssdk\.com\/service\/1\/app_logout\/ url reject-img
+^https?:\/\/aweme\.snssdk\.com\/service\/2\/app_log url reject-img
+^https?:\/\/frontier\.snssdk\.com\/ url reject-img
+^https?:\/\/sf\w-ttcdn-tos\.pstatp\.com\/obj\/web\.business\.image url reject-img
+
+# 京东 Ads
+^https?:\/\/.+\/client?functionId=lauch\/lauchConfig&appName=paidaojia url reject-img
+^https?:\/\/111\.13\.29\.201\/client\.action\?functionId=start url reject-img
+^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=start url reject-img
+^https?:\/\/m\.360buyimg\.com\/mobilecms\/s640x1136_jfs\/ url reject-img
+^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/base\/na\/m\/adInfo url reject-img
+^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=(start|queryMaterialAdverts) url reject-img
+^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-img
+^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/na\/m\/getLoadingPicture url reject-img
+
+# - 网易 Youdao
+^https?:\/\/oimage([a-z])([0-9])\.ydstatic\.com\/.+?&product=adpublish url reject-img
+^https?:\/\/dsp-impr2\.youdao\.com\/adload.s\? url reject-img
+
+# 飞猪Ads
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.trip\.activity\.querytmsresources\/ url reject-img
 
 # -  喜马拉雅 Ads
 ^https?:\/\/.+\/api\/v\d\/adRealTime url reject-img
@@ -46,15 +137,19 @@ hostname = api.weibo.cn, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com,
 ^https?:\/\/m\.elecfans\.com\/static\/js\/ad\.js url reject-img
 ^https?:\/\/www1\.elecfans\.com\/www\/delivery\/ url reject-img
 
-# Weibo Ads (By yichahucha)
+# 微博 Ads (By yichahucha)
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
+^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php url reject-img
+^https?:\/\/wbapp\.uve\.weibo\.com\/wbapplua\/wbpullad\.lua url reject-img
+^https?:\/\/sdkapp\.uve\.weibo\.com/\interface\/sdk\/actionad\.php url reject-img
+^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=get_coopen_ads url reject-img
 
-# Weixin Ads (By Choler)
+# 微信 Ads (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 
-# Zhihu Ads (By onewayticket255)
+# 知乎 Ads (By onewayticket255)
 https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
 https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20people.js
 https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js
@@ -100,6 +195,37 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 # *.xiaoxiao*.com, *.xiao*.com,
 # https:\/\/.*\.xiaoxiao.*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xxys.js
 
+# YouTube去广告
+^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
+^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
+^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
+^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
+^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
+^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
+^https?:\/\/.+\.googlevideo\.com\/ptracking\?pltype=adhost url reject-img
+^https?:\/\/.+\.youtube\.com\/get_midroll url reject-img
+^https?:\/\/.+\.youtube\.com\/ptracking\? url reject-img
+^https?:\/\/m\.youtube\.com\/_get_ads url reject-img
+^https?:\/\/pagead2\.googlesyndication\.com\/pagead\/ url reject-img
+^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
+^https?:\/\/s\.youtube\.com\/api\/stats\/watchtime?adformat url reject-img
+^https?:\/\/s0\.2mdn\.net\/ads\/ url reject-img
+^https?:\/\/stats\.tubemogul\.com\/stats\/ url reject-img
+ctier=[A-Z] url 302 ctier=A
+^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) url reject-200
+
+# 网易漫画去开屏广告
+^https://api-163.biliapi.net/cover url reject-img
+
+# 动画疯 去广告
+# api.gamer.com.tw,
+# https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bahamut.js
+# https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bahamut.js
+
 # 广告
 ^https?://api.bjxkhc.com/index.php/app/ios/ads/index url reject-dict
 ^https?://api.bjxkhc.com/index.php/app/ios/ver/index_ios$ url reject
@@ -112,9 +238,6 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 # 网易蜗牛读书VIP (By yxiaocai and JO2EY)
 ^https?://p\.du\.163\.com/readtime/info.json url reject
 ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wnyd.js
-
-# 网易漫画去开屏广告
-^https://api-163.biliapi.net/cover url reject-img
 
 # 看漫画极速版vip (By HoGer)
 # getuserinfo.321mh.com,
@@ -178,11 +301,6 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 # api.picsart.c*, api.meiease.c*,
 # ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js
 
-# 动画疯 去广告
-# api.gamer.com.tw,
-# https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bahamut.js
-# https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bahamut.js
-
 # 京东比价
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 
@@ -192,22 +310,6 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 
 #adguardpremium
 ^https:\/\/mobile-api\.adguard\.com\/api\/1\.0\/ios_validate_receipt$ url 302 https://raw.githubusercontent.com/langkhach270389/Scripting/master/Adguard.rsp
-
-# YouTube去广告
-# 自行添加主机名
-^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
-^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
-^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
-^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
-^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
-^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
-#新版YouTube去广告
-ctier=[A-Z] url 302 ctier=A
-^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) url reject-200
 
 # from du_github
 #ulysses
@@ -220,9 +322,6 @@ ctier=[A-Z] url 302 ctier=A
 #每日英语阅读/每日外刊 解锁课程  (By chamberlen)
 # dict.eudic.net,
 # ^https:\/\/dict\.eudic\.net\/jingting\/GetThisChapterTaskStatus? url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/mryy.js
-
-#联通营业厅 去轮播广告 (By Wangsc1)
-^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/china_unicom.js
 
 #流利说.阅读 (by@火羽&@singee)
 ^https?:\/\/vira\.llsapp\.com\/api\/v2\/readings\/(accessible|limitation) url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/llyd.js
