--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -2,8 +2,8 @@ hostname = api.weibo.cn, snailsleep.net, api.psy-1.com, api.smzdm.com, *.douban.
 
 # For personal use only
 
-# 蜗牛睡眠会员（by黑黑酱）
-^https:\/\/snailsleep\.net\/snail\/v1\/profile\/get url script-response-body nzw9314/Script/wnsm.js
+# 蜗牛睡眠
+^https:\/\/(snailsleep\.net\/|(music|community)\.snailsleep\.net\/)(snail\/v1\/profile\/get|snail-music\/music\/(sleeping|meditation)\/single\/list) url script-response-body https://raw.githubusercontent.com/photonmang/quantumultX/master/wnsm.js
 
 # 小睡眠（by 黑黑酱）
 ^https:\/\/api\.psy-1\.com\/cosleep\/user\/info url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/xiaoshuimian.js
