--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -1,9 +1,6 @@
-hostname = api.weibo.cn, www.helloshiyu.com/sleep, www.helloshiyu.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname = api.weibo.cn, www.helloshiyu.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
-
-# 睡眠助手
-https://www.helloshiyu.com/sleep/user/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/smzs.js
 
 # Ads Block
 ^https?:\/\/api\.smzdm\.com\/v\d\/util\/loading url reject-img
@@ -22,6 +19,7 @@ https://www.helloshiyu.com/sleep/user/profile url script-response-body https://r
 ^https?:\/\/m\.client\.10010\.com\/uniAdmsInterface\/(getHomePageAd|getWelcomeAd) url reject-img
 ^https?:\/\/m1\.ad\.10010\.com\/noticeMag\/images\/imageUpload\/2\d{3} url reject-img
 ^https?:\/\/res\.mall\.10010\.cn\/mall\/common\/js\/fa\.js?referer= url reject-img
+
 #联通营业厅 去轮播广告 (By Wangsc1)
 ^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/china_unicom.js
 
