--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -1,9 +1,24 @@
-hostname = api.weibo.cn, buy.itunes.apple.com, www.helloshiyu.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname = api.weibo.cn,  www.jianshu.com, blog.csdn.net, *.openinstall.io, www.helloshiyu.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
+# 简书免跳转
+# 先重写到桌面版
+^https:\/\/www\.jianshu\.com\/p url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36$2
+# 注入CSS优化
+^https:\/\/www\.jianshu\.com\/p url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/jianshu.js
+
+# CSDN 免跳转
+# 先重写到桌面版
+^https:\/\/blog\.csdn\.net\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36$2
+// 再注入 CSS 进行优化
+^https:\/\/blog\.csdn\.net\/ url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/csdn.res.js
+// 免跳转应用商店(也可以直接 filter 屏蔽 openinstall.io) *重写到桌面版后，这条规则基本就没什么用了*
+^https:\/\/wvhzpj\.openinstall\.io\/ulink url script-echo-response https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/csdn.req.js
+
 
 # iTunes_verify_receipt
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
+# buy.itunes.apple.com
+#^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
 
 # Ads Block
 ^https?:\/\/api\.smzdm\.com\/v\d\/util\/loading url reject-img
